# bereal

./: .dockerignore  .env  .gitignore  Cargo.toml  bin.dockerfile  build.rs  db.dockerfile  docker-compose.yaml  main.dockerfile
migrations/2022-11-30-130549_post_fields/: down.sql  up.sql
migrations/2022-12-14-143838_create_users/: up.sql
migrations/2022-12-17-195023_create_friends/: up.sql
src/: api.rs  database.rs  graphql.rs  lib.rs  main.rs  migrations.rs  models.rs  schema.rs  storage.rs  util.rs  with_id.rs
src/api/: filter.rs  filters.rs  handler.rs  handlers.rs  models.rs
src/api/graphql/: mod.rs
src/api/rest/: handlers.rs  mod.rs
src/bot/: action.rs  automation.rs  callback.rs  command.rs  handler.rs  keyboard.rs  language.rs  message.rs  mod.rs  schema.rs  state.rs
src/bot/automation/: message_request.rs  with_markup.rs  without_markup.rs
src/bot/state/: confirm_name.rs  language.rs  menu.rs  receive_name.rs  share_contact.rs
src/storage/: database.rs  mod.rs
