[package]
name = "bereal"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
juniper = "0.15.10"
juniper_warp = "0.7.0"
warp = "0.3.3"
dotenvy = "0.15"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
strum = { version = "0.24", features = ["derive"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = { version = "2.0", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["v4", "serde", "macro-diagnostics"] }
async-trait = "0.1"
# url = "2.2.2"
# toml = "0.5.9"
# rmp-serde = "1.1.0"
# base64 = "0.13.0"
